// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`already exported 1`] = `
Array [
  "extracted_ndq7ki.css.ts",
  "export var _red = style({
  color: 'red'
});",
]
`;

exports[`already exported 2`] = `
"import { _red as _red2 } from \\"extracted_ndq7ki.css.ts\\";
import { style } from '@macaron-css/core';
export { _red2 as red };
console.log(_red2);"
`;

exports[`array pattern hoisting 1`] = `
Array [
  "extracted_14e7vm3.css.ts",
  "export var [_themeClass2, _vars] = createTheme({
  colors: {
    brand: 'red'
  }
});
export var [_themeClass, vars] = createTheme({
  colors: {
    brand: 'red'
  }
});",
]
`;

exports[`array pattern hoisting 2`] = `
"import { _vars as _vars2 } from \\"extracted_14e7vm3.css.ts\\";
import { _themeClass as _themeClass2 } from \\"extracted_14e7vm3.css.ts\\";
import { createTheme } from '@macaron-css/core';
console.log(_themeClass2, _vars2);"
`;

exports[`export default style 1`] = `
Array [
  "extracted_5qasdd.css.ts",
  "export var _$$unknown_macaron_identifier = style({
  color: 'red'
});",
]
`;

exports[`export default style 2`] = `
"import { _$$unknown_macaron_identifier as _$$unknown_macaron_identifier2 } from \\"extracted_5qasdd.css.ts\\";
import { style } from '@macaron-css/core';
export default _$$unknown_macaron_identifier2;"
`;

exports[`extracts style function 1`] = `
Array [
  "extracted_1sozav4.css.ts",
  "export var _red = style({
  color: 'red'
});",
]
`;

exports[`extracts style function 2`] = `
"import { _red as _red2 } from \\"extracted_1sozav4.css.ts\\";
import { style } from '@macaron-css/core';
console.log(_red2);"
`;

exports[`hoisting same variable name in different scope 1`] = `
Array [
  "extracted_l7klua.css.ts",
  "export var _red3 = style({
  color: 'blue'
});
export var _red = style({
  color: 'red'
});",
]
`;

exports[`hoisting same variable name in different scope 2`] = `
"import { _red3 as _red4 } from \\"extracted_l7klua.css.ts\\";
import { _red as _red2 } from \\"extracted_l7klua.css.ts\\";
import { style } from '@macaron-css/core';
console.log(_red2);

function SomeComponent() {
  console.log(_red4);
}"
`;

exports[`hoists array member 1`] = `
Array [
  "extracted_rkwtxb.css.ts",
  "export var _$$macaron_arr3 = style({
  color: 'blue'
});
export var _$$macaron_arr = style({
  color: 'red'
});",
]
`;

exports[`hoists array member 2`] = `
"import { _$$macaron_arr3 as _$$macaron_arr4 } from \\"extracted_rkwtxb.css.ts\\";
import { _$$macaron_arr as _$$macaron_arr2 } from \\"extracted_rkwtxb.css.ts\\";
import { style } from '@macaron-css/core';
const arr = [1, 2, _$$macaron_arr2, 4, _$$macaron_arr4];
console.log(arr);"
`;

exports[`hoists inline expression 1`] = `
Array [
  "extracted_47l5xi.css.ts",
  "export var _$$macaron_str = style({
  color: 'red'
});",
]
`;

exports[`hoists inline expression 2`] = `
"import { _$$macaron_str as _$$macaron_str2 } from \\"extracted_47l5xi.css.ts\\";
import { style } from '@macaron-css/core';
const str = \`abc \${_$$macaron_str2}\`;
console.log(str);"
`;

exports[`hoists object property 1`] = `
Array [
  "extracted_2e1qtp.css.ts",
  "export var _$$macaron_key = style({
  color: 'red'
});",
]
`;

exports[`hoists object property 2`] = `
"import { _$$macaron_key as _$$macaron_key2 } from \\"extracted_2e1qtp.css.ts\\";
import { style } from '@macaron-css/core';
const obj = {
  nested: {
    key: _$$macaron_key2
  }
};
console.log(obj);"
`;

exports[`inside block scope 1`] = `
Array [
  "extracted_1xlnrr9.css.ts",
  "export var _red = style({
  color: redColor
});",
]
`;

exports[`inside block scope 2`] = `
"import { _red as _red2 } from \\"extracted_1xlnrr9.css.ts\\";
import { style } from '@macaron-css/core';
const redColor = 'red';
const red = 'a';
{
  console.log(_red2, blue, green);
}"
`;

exports[`inside jsx expression 1`] = `
Array [
  "extracted_5a936u.css.ts",
  "export var _$$macaron_App = style({
  color: 'red'
});",
]
`;

exports[`inside jsx expression 2`] = `
"import { _$$macaron_App as _$$macaron_App2 } from \\"extracted_5a936u.css.ts\\";
import { style } from '@macaron-css/core';

function App() {
  return <div class={_$$macaron_App2}>Hello</div>;
}

console.log(red, blue, green);"
`;

exports[`move bindings along with extracted style 1`] = `
Array [
  "extracted_7ip2jg.css.ts",
  "export var _red = style({
  color: redColor
});",
]
`;

exports[`move bindings along with extracted style 2`] = `
"import { _red as _red2 } from \\"extracted_7ip2jg.css.ts\\";
import { style } from '@macaron-css/core';
const redColor = 'red';
console.log(_red2);"
`;

exports[`multiple variable declarators in one declaration 1`] = `
Array [
  "extracted_93tetg.css.ts",
  "export var _green = style({
  color: 'green'
});
export var _blue = style({
  color: 'blue'
});
export var _red = style({
  color: 'red'
});",
]
`;

exports[`multiple variable declarators in one declaration 2`] = `
"import { _green as _green2 } from \\"extracted_93tetg.css.ts\\";
import { _blue as _blue2 } from \\"extracted_93tetg.css.ts\\";
import { _red as _red2 } from \\"extracted_93tetg.css.ts\\";
import { style } from '@macaron-css/core';
console.log(_red2, _blue2, _green2);"
`;

exports[`same binding in multiple declarations 1`] = `
Array [
  "extracted_s8bnpw.css.ts",
  "",
]
`;

exports[`same binding in multiple declarations 2`] = `
"import { _background as _background2 } from \\"extracted_s8bnpw.css.ts\\";
import { _foreground as _foreground2 } from \\"extracted_s8bnpw.css.ts\\";
import { style } from '@macaron-css/core';
const color = 'red';
console.log(_foreground2, _background2);"
`;

exports[`styled components 1`] = `
Array [
  "extracted_304vki.css.ts",
  "",
]
`;

exports[`styled components 2`] = `
"import { styled } from '@macaron-css/solid';
const Button = styled(\\"button\\", {
  base: {
    color: 'red'
  }
});
console.log(Button);"
`;
